[tool.poetry]
name = "aquarium-leecher"
version = "0.0.4"
description = "Aquarium event listener"
authors = ["Fatfish Lab <hello@fatfi.sh>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
ayon-python-api = "1.0.0"
aquarium-python-api = "2.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
